<resources>
    <string name="app_name">MyAnroid</string>
    <string name="search_btn">搜索</string>
    <string name="serach_et">请输入搜索内容</string>
    <string name="serach_hot">热门标签:</string>
    <string name="serach_result">搜索结果</string>
    <string name="login_id">帐号:</string>
    <string name="login_password">密码:</string>
    <string name="login_repassword">确认密码:</string>
    <string name="login_et_id">请输入帐号:</string>
    <string name="login_et_pw">请输入密码:</string>
    <string name="login_et_repw">请再次输入密码:</string>
    <string name="login_btn_lgoin">登入</string>
    <string name="login_btn_regist">注册</string>
    <string name="login_collece">收藏</string>
    <string name="login_cancel">退出</string>
    <string name="main">首页</string>
    <string name="system">体系</string>
    <string name="project">项目</string>
    <string name="ArticleTitle">标题:\n%s</string>
    <string name="ArticleType">分类:\n%s</string>
    <string name="ArticleTime">时间：\n%s</string>
    <string name="ArticleAuthor">作者:\n%s</string>
</resources>
