<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <Button
            android:layout_marginEnd="5dp"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:id="@+id/search_btn_back"
            android:layout_height="match_parent"
            android:background="@drawable/search_back"
           />
        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:id="@+id/search_et"
            android:layout_marginEnd="5dp"
            android:hint="@string/serach_et"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="2"
            android:id="@+id/search_btn_search"
            android:layout_height="match_parent"
            android:text="@string/search_btn" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:textSize="18sp"
        android:text="@string/serach_hot"/>
    <com.yzh.myanroid.widge.FlowGroup
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:id="@+id/serach_fg_hot"
        android:layout_height="180dp"/>
    <LinearLayout
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/serach_ll_past"
        android:orientation="vertical"/>

 </LinearLayout>