
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main_dl"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <include layout="@layout/top_navigation"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <FrameLayout
            android:id="@+id/container_frament"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15" />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/rg_tab_bar"
            android:orientation="horizontal">
            <RadioButton
                style="@style/tab_menu_item"
                android:id="@+id/rb_home"
                android:text="@string/main"/>
            <RadioButton
                style="@style/tab_menu_item"
                android:id="@+id/rb_system"
                android:text="@string/system"/>
            <RadioButton
                style="@style/tab_menu_item"
                android:id="@+id/rb_project"
                android:text="@string/project" />
        </RadioGroup>
    </LinearLayout>
        <android.support.design.widget.NavigationView
            android:layout_width="match_parent"
            android:id="@+id/activity_main_nv"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:headerLayout="@layout/headerlayout"
            app:menu="@menu/navigation_menu"
        />
</android.support.v4.widget.DrawerLayout>
